selenium项目自定义Conf.setting

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -1,2 +1,7 @@
 [Url]
 baidu_url = https://www.baidu.com
+testerhome_url = https://testerhome.com
+
+[Testerhome]
+username = 2279988684@qq.com
+password = testerhome
